Bug 322361 - Krdc password prompt happens on command line
Summary: Krdc password prompt happens on command line
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: RDP (other bugs)
Version First Reported In: 4.10.90
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
: 316146 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-14 18:32 UTC by AE
Modified: 2013-08-18 14:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description AE 2013-07-14 18:32:21 UTC
With kde-4.11 beta2, connecting to a remote rdp session (remote computer is Win7 64bit) causes the remote password to be prompted on command line (you have to run krdc from a terminal to even be aware of this). In kde-4.10, when krdc still used rdesktop for rdp, you would be presented with the remote login screen instead.

Reproducible: Always
Comment 1 Urs Wolfer 2013-07-15 05:30:56 UTC
What version of freerdp have you installed?
Comment 2 AE 2013-07-15 16:20:42 UTC
The version is freerdp 1.1.0 beta1.
Comment 3 Urs Wolfer 2013-07-15 18:08:41 UTC
I have only tested with freerdp 1.0.2. It looks like 1.1.0 beta1 is not ready for KRDC use. Please try with 1.0.2 and tell me if it works for you.
Comment 4 AE 2013-07-16 17:04:26 UTC
I got the same results with freerdp 1.0.2, and also with krdc-4.10.95. I found however, that ticking the option 'Remember password (kwallet)' - which I hadn't used before - makes krdc show a little popup window as password challenge.
Comment 5 AE 2013-07-16 17:06:01 UTC
Oh yes, this is with version 1.1 beta1 again, so the new version seems to work after all.
Comment 6 Urs Wolfer 2013-07-17 18:16:24 UTC
@Andreas: If I got it right, it DOES work if you activate "Remember password". It does NOT work correct if you do not activate this checkbox. Correct?
Comment 7 AE 2013-07-17 19:23:02 UTC
Correct.
Comment 8 Urs Wolfer 2013-08-07 06:40:51 UTC
I can confirm this issue and will look into it. In my tests, only a Win7 machine was affected (older ones seem to work fine).

Workarounds:
* put "-u USERNAME -p PASSWORD" into the "Extra options" field (Host configuration dialog)
* activate "Remember Password"
Comment 9 Luiz Angelo De Luca 2013-08-16 21:54:54 UTC
Is there any workaround that does not involve "save password"?
Comment 10 Urs Wolfer 2013-08-18 11:57:49 UTC
I have asked xfreerdp developers for the best solution. See also:
https://github.com/FreeRDP/FreeRDP/issues/1396#issuecomment-22243610

I will change KRDC to ask for a username / password before connecting in each case, not only when wallet support is activated (but of course not saving it to wallet in this case). This way I can pass the data to xfreerdp.
Comment 11 Urs Wolfer 2013-08-18 12:25:25 UTC
Git commit bae83f78003f532a34e618cc862b726a9c7004be by Urs Wolfer.
Committed on 18/08/2013 at 12:22.
Pushed by uwolfer into branch 'KDE/4.11'.

fix RDP password requests

- xfreerdp may request password on command line (when NLA auth is activated)
- always request username and password before connecting
FIXED-IN: 4.11.1

M  +27   -24   rdp/rdpview.cpp

http://commits.kde.org/krdc/bae83f78003f532a34e618cc862b726a9c7004be
Comment 12 Urs Wolfer 2013-08-18 14:54:04 UTC
*** Bug 316146 has been marked as a duplicate of this bug. ***