fix RDP password requests

- xfreerdp may request password on command line (when NLA auth is activated)
- always request username and password before connecting

BUG: 322361
FIXED-IN: 4.11.1